Updates in user Management